<resources>
    <string name="app_name">MAA</string>
    <string name="mobile_number1">Mobile Number(10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have account? sing-up now</string>
    <string name="logo">Logo</string>
    <string name="welcome">Welcome To Study Coding!!!</string>
    <string name="credentials_Mobile_Number">Your Mobile Number</string>
    <string name="credentials_password">Your Password</string>
    <string name="enter_Your_Name">Enter Your Name (min: 3Characters)</string>
    <string name="email1">Email Address</string>
    <string name="deliver_address">Delivery Address</string>
    <string name="password1">Choose a password(Min. 4 characters)</string>
    <string name="password2">Confirm Password</string>
    <string name="register">Register</string>
    <string name="write">Enter your registered mobile number and email below:</string>
    <string name="preference_file_name">MAA Preference</string>
    <string name="name">Your Name</string>
    <string name="email2">Your Email</string>
    <string name="delivery">Your Delivery Address</string>
    <string name="password3">Your Password</string>
    <string name="dashboard">dashboard</string>
    <string name="favourites">favourites</string>
    <string name="profile">profile</string>
    <string name="about_app">about app</string>
    <string name="navigation_drawer">Navigation Drawer</string>
</resources>